--- a/atividade-proz.html
+++ b/atividade-proz.html
@@ -14,19 +14,20 @@
   <a href="atividade-proz.html">Atividade_03</a>
 </div>
 
-    <div class="content">
-	<div class="footer" >
+   <div class="content">
+  <div class="footer" >
   <p>Site Criado para Avaliacao neste dia 10-10-2023</p>
 </div><!-divisão ou uma seção de HTML->
 </style>
 <body>
 <fieldset>
 
-<h2>ATIVIDADE 3</h2>
+<p>Avaliação de desempenho muito simples. Parte 03</p>
 <table cellspacing="10">
 <form action="1ATIVIDADE.html" method="post">
 <align="center">
-<p style="text-align:center;"><img src="C:\Users\aluno\Pictures\IBMW.jpg" alt="IBM" width="500" height="333">
+<p style="text-align:center;">
+<img src="C:\Users\aluno\Pictures\transferir (1).jpg" alt="IBM" width="500" height="333">
 
 </p>
 
@@ -37,8 +38,23 @@ Sobre IBM Watson O Watson é uma tecnologia de IA da IBM para empresas, que ajud
 a preverem melhor e moldarem resultados futuros, além de automatizar processos complexos e otimizar
 o tempo dos funcionários.
 <align="center">
-<p style="text-align:center;"><img src="C:\Users\aluno\Downloads\baixados (1).jpg" alt="baixados" width="500" height="333">
+<p style="text-align:center;">
+<img src="C:\Users\aluno\Pictures\transferir.jpg" alt="baixados" width="500" height="333">
 <h3><p style="text-align:center;"><h3>COLAB GLOOGLE:</h3>
+O Colab permite que qualquer pessoa escreva e execute código Python arbitrário pelo navegador
+e é especialmente adequado para aprendizado de máquina, análise de dados e educação.
+ É um conceito amplamente utilizado para descrever parcerias ou colaborações estabelecidas 
+ entre indivíduos, empresas ou artistas com o objetivo de trabalhar juntos em um projeto específico.
+ <p style="text-align:center;">
+ <img src="C:\Users\aluno\Pictures\transferir3.jpg" alt="baixados" width="500" height="333">
+<h3><p style="text-align:center;"><h3>AQB-PANDAS:</h3>
+</p>
+
+Pandas é uma biblioteca para Ciência de Dados de código aberto (open source), construída sobre a linguagem Python,
+e que providencia uma abordagem rápida e flexível, com estruturas robustas para se trabalhar com dados relacionais
+(ou rotulados), e tudo isso de maneira simples e intuitiva.
+</p>
+ 
 <h2><h2>
 
 
@@ -51,9 +67,6 @@ o tempo dos funcionários.
 </body>
 </html>
 
- 
-
-	
 </body>
 </html>
 
