--- a/atividade-proz.html
+++ b/atividade-proz.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head><!-Pode conter alguns elementos de cabeçalho mas também outros elementos->
+<head>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+</head>
+<body>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade_Proz-Educação</title>:<!-elemento que representa o titulo da página->
+    <title>Atividade03_Proz-Educação</title>
 </head>
 <link rel="stylesheet" href="font.css">
 <body>
-
-<div class="topnav">
+  <!- Essa será a ultima pagina, pagina03.->
+ <div class="topnav">
   <a href="atividade00-proz.html">Atividade_01</a>
   <a href="atividade01-proz.html">Atividade_02</a>
   <a href="atividade-proz.html">Atividade_03</a>
+  <a href="atividade 3.html">Atividade_04</a>
+   <a href="atividade 3.html">Atividade_05</a>
 </div>
 
-    <div class="content">
-	<div class="footer" >
+   <div class="content">
+  <div class="footer" >
   <p>Site Criado para Avaliacao neste dia 10-10-2023</p>
 </div><!-divisão ou uma seção de HTML->
 </style>
 <body>
 <fieldset>
 
-<h2>ATIVIDADE 3</h2>
 <table cellspacing="10">
 <form action="1ATIVIDADE.html" method="post">
 <align="center">
-<p style="text-align:center;"><img src="C:\Users\aluno\Pictures\IBMW.jpg" alt="IBM" width="500" height="333">
+<p style="text-align:center;">
+<img src="C:\Users\aluno\Pictures\transferir (1).jpg" alt="IBM" width="500" height="333">
 
 </p>
 
@@ -37,37 +46,30 @@ Sobre IBM Watson O Watson é uma tecnologia de IA da IBM para empresas, que ajud
 a preverem melhor e moldarem resultados futuros, além de automatizar processos complexos e otimizar
 o tempo dos funcionários.
 <align="center">
-<p style="text-align:center;"><img src="C:\Users\aluno\Downloads\baixados (1).jpg" alt="baixados" width="500" height="333">
+<p style="text-align:center;">
+<img src="C:\Users\aluno\Pictures\transferir.jpg" alt="baixados" width="500" height="333">
 <h3><p style="text-align:center;"><h3>COLAB GLOOGLE:</h3>
-<h2><h2>
+O Colab permite que qualquer pessoa escreva e execute código Python arbitrário pelo navegador
+e é especialmente adequado para aprendizado de máquina, análise de dados e educação.
+ É um conceito amplamente utilizado para descrever parcerias ou colaborações estabelecidas 
+ entre indivíduos, empresas ou artistas com o objetivo de trabalhar juntos em um projeto específico.
+ <p style="text-align:center;">
+ <img src="C:\Users\aluno\Pictures\transferir3.jpg" alt="baixados" width="500" height="333">
+<h3><p style="text-align:center;"><h3>AQB-PANDAS:</h3>
+</p>
 
+Pandas é uma biblioteca para Ciência de Dados de código aberto (open source), construída sobre a linguagem Python,
+e que providencia uma abordagem rápida e flexível, com estruturas robustas para se trabalhar com dados relacionais
+(ou rotulados), e tudo isso de maneira simples e intuitiva.
+</p>
+ 	   
+</div>
 
-<p style="text-align:center;"><button class="button">HIPER LINK 2</button>
-</form>
-<p style="text-align:center;"><a href="IOT.html"><button class="button">HIPER LINK 3</button>
-
-<p style="text-align:center;"><a href="atividade 3.html"><button class="button">HIPER LINK 1</button>
-</form>
-</body>
-</html>
-
- 
-
+<div class="footer" >
+  <p>Site Criado para Avaliacao neste dia 10-10-2023</p>
+</div>
 	
 </body>
 </html>
-
 	
-		<H1>Atividade_Proz-Educação</H1><!-H1 é abreviação do termo inglês de Header1,que significa cabeçalho 1,deve ser usado apenas copm titulo da pagina->
 
-		<p>Avaliação de desempenho muito simples.</p><!-A Sigla P representa um parágrafo.parágrafos são representados como blocos indentados de texto ->
-
-	</div>:<!-sigla Div pode ser utilizado para agrupar elementos para fins de estilos->
-
-</form>
-</body>
-</html>
-
- 
-
-	
