--- a/atividade00-proz.html
+++ b/atividade00-proz.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade_Proz-Educação</title>
 </head>
 <link rel="stylesheet" href="font.css">
 <body>
@@ -12,74 +8,59 @@
   <a href="atividade00-proz.html">Atividade_01</a>
   <a href="atividade01-proz.html">Atividade_02</a>
   <a href="atividade-proz.html">Atividade_03</a>
+  <a href="atividade 3.html">Atividade_04</a>
+   <a href="atividade 3.html">Atividade_05</a>
 </div>
- <p>Site Criado para Avaliacao neste dia 10-10-2023</p>
+
 </div>
-</style>
-</head>
-<body>
-<h2>Atividade do Dia</h2>
-<table cellspacing="10">
-<form action="IOT.html" method="post">
-<align="center">
-<p style="text-align:center;"><img src="C:\Users\aluno\Pictures\R.jpg" alt="R" width="500" height="333">
-<p>
-<h3><p style="text-align:center;"><h3>MULHERES NA PROGRAMAÇÃO</h3>
+  <div class="content">
+  <h3>MULHERES NA PROGRAMAÇÃO</h3>
+  
+         <h3> mulheres na programação têm enfrentado desafios relacionados à</br>
+		desigualdade de gênero na indústria de tecnologia. </br>
+		Apesar disso, muitas mulheres têm desempenhado </br>
+		papéis significativos e inovadores na programação,</br> 
+		contribuindo para avanços tecnológicos. Iniciativas de inclusão</br> 
+		e empoderamento estão trabalhando para aumentar a representatividade </br>
+		feminina na programação e criar um ambiente mais diversificado</br> 
+		e equitativo. A diversidade de perspectivas é valiosa para a </br>
+		inovação e o sucesso na área de tecnologia. Portanto, </br>
+		é fundamental promover uma maior participação das mulheres na programação.</br>
+		 <p style="text-align:center;"><img src="MULHERES.jpg" alt="baixados" width="500" height="333">
+
+</p>
 
 <h2>UX<h2>
+ <p style="text-align:center;"><img src="UX.jpg" alt="baixados" width="500" height="333">
 </p>
-A entrega de soluções que atendam de maneira mais completa as necessidades dos clientes</br>
+  <h3>A entrega de soluções que atendam de maneira mais completa as necessidades dos clientes</br>
 Melhora na imagem da empresa no seu mercado de atuação</br>
 Entrega de produtos mais competitivos</br>
 Aumento da satisfação dos clientes</br>
 </p>
 <h2>UI<h2>
-Com crescimento exponencial da tecnologia  e os dispositivos digitais cada vez </br>
+ <p style="text-align:center;"><img src="UI.jpg" alt="baixados" width="500" height="333">
+  <h3>Com crescimento exponencial da tecnologia  e os dispositivos digitais cada vez </br>
 mais presentes em nossas vidas,a interface do usuario (UI) </br>
 Desde aplicativos moveis e sites té sistemas e dispositivos inteligentes </br>
 o design da interface do usuário desempenha um papel central na forma como interagimos com a tecnologia.</br>
 Seu propósito é facilitar a usabilidade e a experiência do usuário,garantindo que a interface seja intuitiva.</br>
 </P>
 <h2>IOT<h2>
-A Internet das Coisas (IoT) descreve a rede de objetos físicos incorporados a sensores, software e outras tecnologias com </br>
+ <p style="text-align:center;"><img src="IOT.jpg" alt="baixados" width="500" height="333">
+ <h3>A Internet das Coisas (IoT) descreve a rede de objetos físicos incorporados a sensores, software e outras tecnologias com </br>
 o objetivo de conectar e trocar dados com outros dispositivos e sistemas pela internet. Esses dispositivos variam de </br>
 objetos domésticos comuns a ferramentas industriais sofisticadas. Com mais de 7 bilhões de dispositivos IoT </br>
 conectados hoje, os especialistas esperam que esse número cresça para 10 bilhões em 2020 e 22 bilhões em 2025.</br>
 </p>
-<h2>MULHERES NA PROGRAMAÇÃO<H2>
-Atualmente, as mulheres são destaque na área de tecnologia. Porém, essa</br>
-importância e participação já acontece há muito tempo, embora nos dias atuais</br>
-ocorra um reconhecimento um pouco maior, as mulheres ainda sofrem com a falta de espaço na tecnologia.</br>
-Mas, se você quer saber qual a história das mulheres na programação e entender</br>
-como é o mercado de trabalho para o público feminino, quais cursos fazer para iniciar na área, este conteúdo é para você! </br>
-</p>
+</div>
+	
+ 
 
-</style>
-</head>
-<body>
-
-<p style="text-align:center;"><button class="button">HIPER LINK 1</button>
-<p style="text-align:center;"><button class="button">HIPER LINK 2</button>
-<p style="text-align:center;"><button class="button">HIPER LINK 3</button>
-
-</body>
-</html>
-
+<div class="footer" >
+  <p>Site Criado para Avaliacao neste dia 10-10-2023</p>
+</div>
 	
 </body>
 </html>
 
-    <div class="content">
-	
-		<H1>Atividade_Proz-Educação</H1>
-
-		<p>Avaliação de desempenho muito simples. Parte 02</p>
-
-	</div>
-
-</body>
-</html>
-
-	
-</body>
-</html>
