--- a/atividade01-proz.html
+++ b/atividade01-proz.html
@@ -12,35 +12,16 @@
   <a href="atividade00-proz.html">Atividade_01</a>
   <a href="atividade01-proz.html">Atividade_02</a>
   <a href="atividade-proz.html">Atividade_03</a>
+  <a href="atividade 3.html">Atividade_04</a>
+   <a href="atividade 3.html">Atividade_05</a>
 </div>
 
-    <div class="content">
+  <div class="content">
 	
-		<H1>Atividade_Proz-Educação</H1>
+	<H1>Atividade_Proz-Educação</H1>
 
-		<p>Avaliação de desempenho muito simples. Parte 02</p>
-
-	</div>
-	
- 
-
-<div class="footer" >
-  <p>Site Criado para Avaliacao neste dia 10-10-2023</p>
-</div>
-</style>
-</head>
-<body>
-<h2>ATIVIDADE 2</h2>
-<table cellspacing="10">
-<form action="1ATIVIDADE.html" method="post">
-
-<align="center">
-<p style="text-align:center;"><img src="C:\Users\aluno\Downloads\th.jpg" alt="th" width="500" height="333">
-
-<!- C:\Users\aluno\Downloads\th.jpg->
-
-
-<h3><p style="text-align:center;"><h3>MACHINE LEARNING:</h3>
+	<p>Avaliação de desempenho muito simples. Parte 02</p>
+	<h3><p style="text-align:center;"><h3>MACHINE LEARNING:</h3>
 </P>
 machine learning para a implementação de Machine Learning,diversass técnicas estão envolvidas</br>
 do uso de estatisticas para auxiliar na anlise e predição de dados a técnicas de mineraçãode dados</br>
@@ -58,40 +39,36 @@ nasceu da ideia de que as maquinas podiam aprender a realizar  tarefas. </br>
  e execute tarefas semelhantes às dos seres humanos, tais como a identificação de imagens, o reconhecimento de voz </br>
  O deep learning ou aprendizagem profunda baseia-se no machine learning para, a partir de uma grande quantidade de dados e após inúmeras camadas de processamento com algoritmos,</p>
  <p style="text-align:center;"><img src="C:\Users\aluno\Downloads\baixados.jpg" alt="baixados" width="500" height="333">
-</p>
- 
  <h3><p style="text-align:center;"><h3>IOT:</h3>
 </P>
 A Internet das Coisas (IoT) descreve a rede de objetos físicos incorporados a sensores, software e outras tecnologias com </br>
 o objetivo de conectar e trocar dados com outros dispositivos e sistemas pela internet. Esses dispositivos variam de </br>
 objetos domésticos comuns a ferramentas industriais sofisticadas. Com mais de 7 bilhões de dispositivos IoT </br>
 conectados hoje, os especialistas esperam que esse número cresça para 10 bilhões em 2020 e 22 bilhões em 2025.</br>
-</p>
+
 <h3><p style="text-align:center;"><h3>RASPBERRY:</h3>
+Raspberry Pi (RPi) é um conjunto de mini-computadores de
+placa única. Eles contam com componentes integrados em
+apenas uma multiplataforma. Para um entendimento mais
+simples, o Raspberry Pi é basicamente um computador em
+formato de placa, que permite a conexão de periféricos,
+como mouse, teclado e outros dispositivos
 </P>
 <p style="text-align:center;"><img src="C:\Users\aluno\Downloads\imagens1.jpg" alt="imagens" width="500" height="333">
 
-</P>
-<h3><p style="text-align:center;"><h3>ARDUINO:</h3>
- <p style="text-align:center;"><img src="C:\Users\aluno\Downloads\arduino.jpg" alt="arduino" width="500" height="333">
- </P>
- <h3><p style="text-align:center;"><h3>LEGO EV3:</h3>
- <p style="text-align:center;"><img src="C:\Users\aluno\Downloads\lego.jpg" alt="lego" width="500" height="333">
-
 </p>
-</style>
-</head>
-<body>
+	   
+</div>
+	
+ 
 
-<p style="text-align:center;"><button class="button">HIPER LINK 1</button>
-</form>
-<p style="text-align:center;"><a href="IOT.html"><button class="button">HIPER LINK 2</button>
-
-<<p style="text-align:center;"><a href="atividade 3.html"><button class="button">HIPER LINK 3</button>
-</form>
-</body>
-</html>
-
+<div class="footer" >
+  <p>Site Criado para Avaliacao neste dia 10-10-2023</p>
+</div>
 	
 </body>
 </html>
+
+ 
+
+
